--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
-apply plugin: "groovy"
+apply plugin: 'groovy'
 
-project.group = "co.langzeit.proboscis"
+project.ext {
+  group = 'co.langzeit'
+  artifact = 'proboscis'
+}
 
 repositories {
   mavenCentral()
@@ -13,7 +16,7 @@ dependencies {
   // compile 'org.codehaus.groovy:groovy-all:2.1.3'
   compile localGroovy()
   
-  shell_class_loader "jline:jline:0.9.94"
+  shell_class_loader 'jline:jline:0.9.94'
 }
 
 /*
@@ -54,4 +57,8 @@ task(shell, dependsOn: ':build') {
     shell.run()
   }
   
+}
+
+jar {
+  baseName = 'proboscis'
 }
